--- a/test-功能框.html
+++ b/test-功能框.html
@@ -1,6 +1,7 @@
 <!--这里是为了做个功能框。当用户选中某块时，hover显示功能框，选择需要的功能-->
 <!--同时尝试做一个放置翻译结果的sticky小框-->
 <!--html事件onmouseup-->
+<!--用CSS的动画效果做出翻译小框的显现-->
 <!DOCTYPE html>
 <html>
     <head>
@@ -36,18 +37,53 @@
                 background-color:#d4d0d0;
             }
             .dropdown:hover .dropdown-content{
-                display:block;
+                display: block;
             }
             .dropdown:hover .dropbtn{
                 background-color: #3e8e41;
             }
+            #translateAns{
+                position:absolute;
+                visibility: hidden;
+                overflow: hidden;
+                border:1px solid #CCC;
+                background-color: #F9F9F9;
+                border:1px solid #333;
+                padding:5px;
+                box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            }
         </style>
+        <script>
+            function showOptions(){
+                var x=document.getElementById("options");
+                x.style.display="block";
+                x.style.left=window.event.clientX+10+'px';
+                x.style.top=window.event.clientY+5+'px';
+                x.style.position="absolute";
+                document.body.appendChild(x);
+            }
+            function hideOptions(){
+                document.getElementById("options").style.display="none";
+            }
+        </script>
     </head>
     <body>
+        <p oncontextmenu="showOptions()" onclick="hideOptions()">
+            In the time since the 1986 edition of this book, the world of compiler design has changed significantly.
+            Programming languages have evolved to present new compilation problems. Computer architectures offer 
+            a variety of resources of which the compiler designer must take advantage. Perhaps most interestingly, 
+            the venerable technology of code optimization has found use outside compilers. It is now used in tools
+            that find bugs in software, and most importantly, find security holes in existing code. And much of 
+            the "front-end" technology grammars, regular expressions, parsers, and syntax-directed translators - 
+            are still in wide use. Thus, our philosophy from previous versions of the book has not changed. We 
+            recognize that few readers will build, or even maintain, a compiler for a major programming language. 
+            Yet the models, theory, and algorithms associated with a compiler can be applied to a wide range of 
+            problems in software design and software development. We therefore emphasize problems that are most 
+            commonly encountered in designing a language processor, regardless of the source language or target machine. </p>
         <div class="dropdown">
             <button class="dropbtn">下拉菜单</button>
-            <div class="dropdown-content">
-                <input type="button" value="translate" onclick="translate()">
+            <div class="dropdown-content" id="options">
+                <input type="button" id="translate" value="translate" onclick="translate()">
                 <input type="button" value="highlight" onclick="highlight()">
                 <input type="button" value="explain" onclick="explain()">
                 <input type="button" value="summarize" onclick="summarize()">
