--- a/learnVue/index.html
+++ b/learnVue/index.html
@@ -75,6 +75,10 @@
             
             <!--用v-bind可以直接或间接地绑定元素额class、style等属性-->
 
+            <!--事件监听可以用v-on指令,见监听属性部分
+                修饰符：.stop\.prevent\.capture\.self\.once
+                按键修饰符：<input v-on:keyup.enter="submit">enter键提交-->
+          
             <!---->
         </div>
 
